--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "serv-test": "node server.js && node client.js"
     },
     "devDependencies": {
+        "@types/express": "^4.17.13",
         "@types/node": "^17.0.23",
         "typescript": "^4.5.4",
         "vite": "^2.9.0"
@@ -27,7 +29,11 @@
         "ammo.js": "github:kripken/ammo.js",
         "ammojs-typed": "github:giniedp/ammojs-typed",
         "babylonjs": "^5.1.0",
+        "browserify-middleware": "^8.1.1",
         "cannon": "github:schteppe/cannon.js",
-        "regenerator-runtime": "^0.13.9"
-    }
+        "express": "^4.18.1",
+        "regenerator-runtime": "^0.13.9",
+        "socket.io": "^4.5.0"
+    },
+    "type": "module"
 }
