--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
-    "name": "webarttherapyts",
-    "private": true,
-    "version": "0.0.0",
+    "name": "wbp-artthe",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "serv-test": "node server.js && node client.js"
+        "serve": "webpack-dev-server",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+        "build": "webpack",
+        "dev:start": "npm-run-all build start",
+        "start": "node ./public/bundle.js",
+        "dev": "nodemon --watch ./ -e ts,json,html,js --exec npm run dev:start"
     },
+    "author": "",
+    "license": "ISC",
     "devDependencies": {
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
-        "@types/node": "^17.0.23",
-        "typescript": "^4.5.4",
-        "vite": "^2.9.0"
+        "@types/node": "^17.0.31",
+        "nodemon": "^2.0.16",
+        "ts-loader": "^9.3.0",
+        "ts-node": "^10.7.0",
+        "tslib": "^2.4.0",
+        "tslint": "^6.1.3",
+        "typescript": "^4.6.4",
+        "webpack": "^5.72.1",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.9.0"
     },
     "dependencies": {
         "@babylonjs/core": "^5.1.0",
@@ -23,8 +37,13 @@
         "@types/cannon": "^0.1.8",
         "babylonjs": "^5.1.0",
         "cannon": "github:schteppe/cannon.js",
+        "dotenv": "^16.0.0",
         "express": "^4.18.1",
-        "regenerator-runtime": "^0.13.9"
+        "npm-run-all": "^4.1.5"
     },
-    "type": "module"
+    "nodemonConfig": {
+        "ignore": [
+            "public/*.js"
+        ]
+    }
 }
