--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "tslint -c tslint.json -p tsconfig.json --fix",
         "build": "webpack",
-        "dev:start": "npm-run-all build start",
-        "start": "node ./public/bundle.js",
+        "dev:start": "npm-run-all lint build start",
+        "start": "node ./server.js",
         "dev": "nodemon --watch ./ -e ts,json,html,js --exec npm run dev:start"
     },
     "author": "",
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
+        "@types/lodash": "^4.14.182",
         "@types/node": "^17.0.31",
         "nodemon": "^2.0.16",
         "ts-loader": "^9.3.0",
@@ -39,11 +40,12 @@
         "cannon": "github:schteppe/cannon.js",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "lodash": "^4.17.21",
         "npm-run-all": "^4.1.5"
     },
     "nodemonConfig": {
         "ignore": [
-            "public/*.js"
+            "public/js/*.js"
         ]
     }
 }
