--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/express": "^4.17.13",
         "@types/lodash": "^4.14.182",
         "@types/node": "^17.0.31",
+        "@types/socket.io-p2p": "^2.2.2",
         "nodemon": "^2.0.16",
         "ts-loader": "^9.3.0",
         "ts-node": "^10.7.0",
@@ -40,8 +41,15 @@
         "cannon": "github:schteppe/cannon.js",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "express-useragent": "^1.0.15",
         "lodash": "^4.17.21",
-        "npm-run-all": "^4.1.5"
+        "npm-run-all": "^4.1.5",
+        "simple-peer": "^9.11.1",
+        "socket.io": "^4.5.0",
+        "socket.io-client": "^4.5.0",
+        "socket.io-p2p": "^2.2.0",
+        "socket.io-p2p-server": "^1.2.0",
+        "stream": "npm:readable-stream@^3.6.0"
     },
     "nodemonConfig": {
         "ignore": [
