--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "tslint -c tslint.json -p tsconfig.json --fix",
         "build": "webpack",
-        "dev:start": "npm-run-all lint build start",
-        "start": "node ./server.js",
-        "dev": "nodemon --watch ./ -e ts,json,html,js --exec npm run dev:start"
+        "start:dev": "npm-run-all lint build start",
+        "start": "npm --prefix ./artthe-backend/ run start:dev"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
+        "@types/local-ipv4-address": "^0.0.0",
         "@types/lodash": "^4.14.182",
         "@types/node": "^17.0.31",
-        "@types/socket.io-p2p": "^2.2.2",
+        "@types/qrcode": "^1.4.2",
+        "@types/uuid": "^8.3.4",
         "nodemon": "^2.0.16",
         "ts-loader": "^9.3.0",
         "ts-node": "^10.7.0",
@@ -28,7 +29,11 @@
         "typescript": "^4.6.4",
         "webpack": "^5.72.1",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.9.0"
+        "webpack-dev-server": "^4.9.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.3.2"
     },
     "dependencies": {
         "@babylonjs/core": "^5.1.0",
@@ -39,21 +44,23 @@
         "@types/cannon": "^0.1.8",
         "babylonjs": "^5.1.0",
         "cannon": "github:schteppe/cannon.js",
+        "child_process": "^1.0.2",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
         "express-useragent": "^1.0.15",
+        "local-ipv4-address": "^0.0.2",
         "lodash": "^4.17.21",
         "npm-run-all": "^4.1.5",
-        "simple-peer": "^9.11.1",
+        "os": "^0.1.2",
+        "peerjs": "^1.4.4",
+        "qrcode": "^1.5.0",
         "socket.io": "^4.5.0",
-        "socket.io-client": "^4.5.0",
-        "socket.io-p2p": "^2.2.0",
-        "socket.io-p2p-server": "^1.2.0",
-        "stream": "npm:readable-stream@^3.6.0"
+        "socket.io-client": "^4.5.0"
     },
     "nodemonConfig": {
         "ignore": [
-            "public/js/*.js"
+            "public/js/*.js",
+            "tslint.json"
         ]
     }
 }
