--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
         "@types/node": "^17.0.31",
         "@types/qrcode": "^1.4.2",
         "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.27.0",
+        "@typescript-eslint/parser": "^5.27.0",
+        "eslint": "^8.16.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "nodemon": "^2.0.16",
+        "prettier": "2.6.2",
         "ts-loader": "^9.3.0",
         "ts-node": "^10.7.0",
         "tslib": "^2.4.0",
@@ -29,11 +35,7 @@
         "typescript": "^4.6.4",
         "webpack": "^5.72.1",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.9.0",
-        "eslint": "^8.0.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.3.2"
+        "webpack-dev-server": "^4.9.0"
     },
     "dependencies": {
         "@babylonjs/core": "^5.1.0",
